[gd_scene load_steps=7 format=3 uid="uid://bw8sexyucgm2g"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_xxx6d"]
[ext_resource type="Script" path="res://Script/pickable_ball.gd" id="2_v744f"]
[ext_resource type="PackedScene" uid="uid://bj346i3fgeg3g" path="res://Assets/Objects/uploads_files_3525041_Basketball.fbx" id="3_6uiu0"]
[ext_resource type="AudioStream" uid="uid://bk6piu17quepw" path="res://Assets/sounds/ball-passing-sound.mp3" id="4_p2jdg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ma6dt"]
bounce = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_085go"]
radius = 0.15

[node name="PickableObject" groups=["Ball"] instance=ExtResource("1_xxx6d")]
collision_mask = 9
mass = 0.8
physics_material_override = SubResource("PhysicsMaterial_ma6dt")
gravity_scale = 0.0
script = ExtResource("2_v744f")
picked_up_layer = 4

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("SphereShape3D_085go")

[node name="Area3D" type="Area3D" parent="." index="1"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("SphereShape3D_085go")

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 3.0

[node name="uploads_files_3525041_Basketball" parent="." index="3" instance=ExtResource("3_6uiu0")]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, 0, 0, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.449936, 0)
stream = ExtResource("4_p2jdg")

[connection signal="picked_up" from="." to="." method="_on_picked_up"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
